cruft-ng (0.4) UNRELEASED; urgency=medium

  * Enable DEBUG all over the place
  * Print DEBUG info to stderr

 -- Alexandre Detiste <alexandre.detiste@gmail.com>  Mon, 11 May 2015 16:50:37 +0200

cruft-ng (0.3) unstable; urgency=medium

  * Fix stack-smashing error, replace strcpy by strncpy (Closes: #783723)
  * Enable use of 'DEBUG' environment variable

 -- Alexandre Detiste <alexandre.detiste@gmail.com>  Mon, 04 May 2015 10:20:24 +0200

cruft-ng (0.2) unstable; urgency=medium

  * Fix license of mlocate_db.h in d/copyright
  * fail immediatly if can't read mlocate's db
  * enable hardening

 -- Alexandre Detiste <alexandre.detiste@gmail.com>  Wed, 29 Apr 2015 14:48:56 +0200

cruft-ng (0.1) unstable; urgency=medium

  * Initial release. (Closes: #770445)

 -- Alexandre Detiste <alexandre.detiste@gmail.com>  Sun, 23 Nov 2014 14:05:29 +0200